Migrate to Java 11 and Vaadin Flow 14 + basic rework of routing and server config
Vaadin migration:
- Upgrade versions (vaadin, spring, spring-boot, gradle vaadin plugin, ...)
- Change packages and methods that changed
- Lots of TODO's left

Routing, server config:
Taken from the vaadin example project https://vaadin.com/start/latest/full-stack-spring